chore: add type field to CreateRequest
